# healthcare-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
app/: settings.py  urls.py
app/app/: settings.py
healthcare/: models.py  serializers.py  services.py  urls.py  views.py
healthcare/migrations/: 0001_initial.py
